--- a/portal/src/main/resources/client/src/app/component/company-edit-dialog/company-edit-dialog.component.html
+++ b/portal/src/main/resources/client/src/app/component/company-edit-dialog/company-edit-dialog.component.html
@@ -10,27 +10,19 @@
         <input matInput (keyup)="applyFilter($event)" placeholder="Filter">
       </label>
     </mat-form-field>
-    <button mat-button color="primary" fxFlex="10%" value="bold" (click)="createCompany()">
-      <mat-icon>add</mat-icon>
-      New
-    </button>
   </div>
   <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
     <ng-container matColumnDef="position">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> No.</th>
       <td mat-cell *matCellDef="let element"> {{element.position}} </td>
     </ng-container>
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Company</th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
     <ng-container matColumnDef="city">
-      <th mat-header-cell *matHeaderCellDef> Cities</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> City</th>
       <td mat-cell *matCellDef="let element"> {{element.city}} </td>
     </ng-container>
-    <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef> Descriptions</th>
-      <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+    <ng-container matColumnDef="address">
+      <th mat-header-cell *matHeaderCellDef> Address</th>
+      <td mat-cell *matCellDef="let element"> {{element.address}} </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selected(row);"></tr>
