--- a/client/src/app/component/new-user-dialog/new-user-dialog.component.html
+++ b/client/src/app/component/new-user-dialog/new-user-dialog.component.html
@@ -1,6 +1,6 @@
 <div fxLayoutGap="20px">
   <div class="modal-header" fxLayout="column" fxLayoutAlign="center center" >
-    <div>New User</div>
+    <span style="font: 25px bold">New User</span>
   </div>
   <div class="modal-content" fxLayout="column" fxLayoutAlign="space-between stretch" fxLayoutGap="10px">
     <form (ngSubmit)="onSubmit()" fxLayout="column" fxLayoutAlign="start stretch"
@@ -49,8 +49,7 @@
         <button mat-button fxFlex md-raised-button color="primary" type="submit">
           <mat-icon>done</mat-icon>
         </button>
-        <button mat-button md-raised-button type="button" color="primary" class="stretch-50-xs"
-                (click)="onCancel()">
+        <button mat-button md-raised-button type="button" color="primary" class="stretch-50-xs">
           <mat-icon (click)="onCancel()">cancel</mat-icon>
         </button>
       </div>
