--- a/client/src/app/component/user-edit-dialog/user-edit-dialog.component.html
+++ b/client/src/app/component/user-edit-dialog/user-edit-dialog.component.html
@@ -1,6 +1,6 @@
 <div fxLayoutGap="20px">
   <div class="modal-header" fxLayout="column" fxLayoutAlign="center center" >
-    <div>Edit User</div>
+    <span style="font: 25px bold">Edit User</span>
   </div>
   <div class="modal-content" fxLayout="column" fxLayoutAlign="space-between stretch" fxLayoutGap="10px">
     <form (ngSubmit)="onSubmit()" fxLayout="column" fxLayoutAlign="start stretch"
