--- a/client/src/app/component/companies/companies.component.html
+++ b/client/src/app/component/companies/companies.component.html
@@ -10,7 +10,8 @@
         <input matInput (keyup)="applyFilter($event)" placeholder="Filter">
       </label>
     </mat-form-field>
-    <button mat-button color="primary" fxFlex="10%" value="bold" (click)="createCompany()">
+    <button mat-button color="primary" fxFlex="10%" value="bold" (click)="createCompany()"
+            *ngIf="isAuthenticated() && isAdmin()">
       <mat-icon>add</mat-icon>
       New
     </button>
@@ -31,6 +32,10 @@
     <ng-container matColumnDef="description">
       <th mat-header-cell *matHeaderCellDef> Descriptions</th>
       <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+    </ng-container>
+    <ng-container matColumnDef="active" *ngIf="isAuthenticated() && isAdmin()">
+      <th mat-header-cell *matHeaderCellDef> Active</th>
+      <td mat-cell *matCellDef="let element"> {{element.active}} </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selected(row);"></tr>
