--- a/client/src/app/component/company-edit-dialog/company-edit-dialog.component.html
+++ b/client/src/app/component/company-edit-dialog/company-edit-dialog.component.html
@@ -10,10 +10,12 @@
         <input matInput (keyup)="applyFilter($event)" placeholder="Filter">
       </label>
     </mat-form-field>
-    <button mat-button color="primary" fxFlex="10%" value="bold" (click)="onEdit()">
+    <button mat-button color="primary" fxFlex="10%" value="bold" (click)="onEdit()"
+            *ngIf="isAuthenticated() && isAdmin()">
       <mat-icon>edit</mat-icon>
     </button>
-    <button mat-button color="primary" fxFlex="10%" value="bold" (click)="onDelete()">
+    <button mat-button color="primary" fxFlex="10%" value="bold" (click)="onDelete()"
+            *ngIf="isAuthenticated() && isAdmin()">
       <mat-icon>delete</mat-icon>
     </button>
     <button mat-button color="primary" fxFlex="10%" value="bold" (click)="onCancel()">
@@ -32,6 +34,10 @@
     <ng-container matColumnDef="address">
       <th mat-header-cell *matHeaderCellDef> Address</th>
       <td mat-cell *matCellDef="let element"> {{element.address}} </td>
+    </ng-container>
+    <ng-container matColumnDef="active" *ngIf="isAuthenticated() && isAdmin()">
+      <th mat-header-cell *matHeaderCellDef> Active</th>
+      <td mat-cell *matCellDef="let element"> {{element.active}} </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selected(row);"></tr>
