--- a/client/src/app/component/user-edit-dialog/user-edit-dialog.component.html
+++ b/client/src/app/component/user-edit-dialog/user-edit-dialog.component.html
@@ -48,8 +48,8 @@
         <mat-form-field>
           <mat-label>Active</mat-label>
           <mat-select [formControl]="active" required>
-            <mat-option value="true">TRUE</mat-option>
-            <mat-option value="false">FALSE</mat-option>
+            <mat-option [value]="true">TRUE</mat-option>
+            <mat-option [value]="false">FALSE</mat-option>
           </mat-select>
           <mat-error *ngIf="role.invalid">{{getActiveErrorMessage()}}</mat-error>
         </mat-form-field>
