--- a/client/src/app/component/company-edit-dialog/company-edit-dialog.component.html
+++ b/client/src/app/component/company-edit-dialog/company-edit-dialog.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="column">
-  <span style="font: 25px bold">Companies</span>
+  <span style="font: 25px bold">{{company.name}}</span>
   <div fxLayout
        fxLayout.xs="column"
        fxLayoutAlign="start"
