--- a/client/src/app/component/scanner-configs/scanner-configs.component.html
+++ b/client/src/app/component/scanner-configs/scanner-configs.component.html
@@ -11,7 +11,7 @@
       </label>
     </mat-form-field>
     <button mat-button color="primary" fxFlex="10%" value="bold" (click)="createScannerConfigs()"
-            *ngIf="isAuthenticated() && isAdmin()">
+            *ngIf="isAuthenticated()">
       <mat-icon>add</mat-icon>
       New
     </button>
@@ -32,25 +32,25 @@
     <ng-container matColumnDef="queue">
       <th mat-header-cell *matHeaderCellDef [width]="100"> </th>
       <td mat-cell *matCellDef="let element">
-        <mat-progress-bar mode="indeterminate" *ngIf="!isStarted()"></mat-progress-bar>
+        <mat-progress-bar mode="indeterminate" *ngIf="isStarted()"></mat-progress-bar>
       </td>
     </ng-container>
-    <ng-container matColumnDef="start" *ngIf="isAuthenticated() && isAdmin()">
+    <ng-container matColumnDef="start" *ngIf="isAuthenticated()">
       <th mat-header-cell *matHeaderCellDef> Action</th>
       <td mat-cell *matCellDef="let row">
-        <button mat-icon-button color="primary" *ngIf="isStarted()"
+        <button mat-icon-button color="primary" *ngIf="!isStarted()"
                 (click)="start(row)"
                 title="Start Scanner">
           <mat-icon>send</mat-icon>
         </button>
-        <button mat-icon-button="stop" color="primary" *ngIf="!isStarted()"
+        <button mat-icon-button="stop" color="primary" *ngIf="isStarted()"
                 (click)="stop(row)"
                 title="Stop Scanner">
           <mat-icon>stop</mat-icon>
         </button>
       </td>
     </ng-container>
-    <ng-container matColumnDef="preview" *ngIf="isAuthenticated() && isAdmin()">
+    <ng-container matColumnDef="preview" *ngIf="isAuthenticated()">
       <th mat-header-cell *matHeaderCellDef> Preview</th>
       <td mat-cell *matCellDef="let row">
         <button mat-icon-button color="primary" [disabled]="!isPreviewEnabled()"
@@ -59,7 +59,7 @@
         </button>
       </td>
     </ng-container>
-    <ng-container matColumnDef="edit" *ngIf="isAuthenticated() && isAdmin()">
+    <ng-container matColumnDef="edit" *ngIf="isAuthenticated()">
       <th mat-header-cell *matHeaderCellDef> Edit</th>
       <td mat-cell *matCellDef="let row">
         <button mat-icon-button color="primary" (click)="edit(row)" title="Edit Scanner">
@@ -67,7 +67,7 @@
         </button>
       </td>
     </ng-container>
-    <ng-container matColumnDef="active" *ngIf="isAuthenticated() && isAdmin()">
+    <ng-container matColumnDef="active" *ngIf="isAuthenticated()">
       <th mat-header-cell *matHeaderCellDef> Delete</th>
       <td mat-cell *matCellDef="let row">
         <button mat-icon-button color="primary" (click)="delete(row)" title="Delete Scanner">
