--- a/client/src/app/component/scanner-configs/scanner-configs.component.html
+++ b/client/src/app/component/scanner-configs/scanner-configs.component.html
@@ -29,7 +29,7 @@
       <th mat-header-cell *matHeaderCellDef> URL</th>
       <td mat-cell *matCellDef="let element"> {{element.url}} </td>
     </ng-container>
-    <ng-container matColumnDef="queue">
+    <ng-container matColumnDef="progress">
       <th mat-header-cell *matHeaderCellDef [width]="100"> </th>
       <td mat-cell *matCellDef="let element">
         <mat-progress-bar mode="indeterminate" *ngIf="isStarted()"></mat-progress-bar>
